fgdiag (0.2.42) UNRELEASED; urgency=low

  * Format the elapsed seconds into HH:MM:SS format (Closes: #26281)

 -- Ryan Niebur <ryan@debian.org>  Sat, 14 Jan 2012 13:39:40 -0800

fgdiag (0.2.41) freegeek-test; urgency=low

  * save the number of megabytes for the drives to the disktest_runs
    table in fgdb.rb

 -- Ryan Niebur <ryan@debian.org>  Wed, 07 Dec 2011 16:09:12 -0800

fgdiag (0.2.40) freegeek-test; urgency=low

  [ Vagrant Cascadian ]
  * remove fgdiag-open4 package, as all current versions of debian include
    libopen4-ruby1.8. 

  [ Ryan Niebur ]
  * log to the fgdb.rb install at $DISKTEST_LOGTO_FGDB if its set

  [ Vagrant Cascadian ]
  * lower dependency on xresprobe to a recommends, as xresprobe was removed 
    from squeeze.

 -- Vagrant Cascadian <vagrant@debian.org>  Sat, 26 Mar 2011 18:41:55 -0700

fgdiag (0.2.39) freegeek-test; urgency=low

  [ Ryan Niebur ]
  * make mem_debug default
  * remove lspci
  
  [ Vagrant Cascadian ]
  * disktest:
    - when DISKTEST_REQUIRED_NUMBER_OF_DRIVES variable is set, convert to an
      integer before using.
    - initiate a smart self-test before testing the drives. (Closes: #21275)

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 18 Jan 2011 14:54:36 -0800

fgdiag (0.2.38) freegeek-test; urgency=low

  * video-detect
    - add some disabled code to use lspci to determine the
      video ram
    - clean up the script a bit
    - add a mem_debug option to show values for all
      detection methods
    - source /etc/fgdiag.conf if it exists

 -- Ryan Niebur <ryan@debian.org>  Tue, 06 Jul 2010 15:08:43 -0700

fgdiag (0.2.37) freegeek-test; urgency=low

  * split out the reading and the writing in the user display rather
    than trying to calculate a single percentage for the whole badblocks
    run (Closes: #18546)

 -- Ryan Niebur <ryan@debian.org>  Tue, 06 Jul 2010 11:12:39 -0700

fgdiag (0.2.36) freegeek-test; urgency=low

  * clean up logged messages yet more
